--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-        <div class="col-sm-4 show-1">
-            <img src="images/Martha Spencer 1.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Martha Spencer and The Wonderland Country Band</h2>
-            <h3>December 7th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1009248538547?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         <div class="col-sm-4 show-1">
+            <img src="images/New Years Eve.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Austin's Rockin' New Years Show</h2>
+            <h3>December 31st, 2024</h3>
+            <h3>Red Door 8PM | Show 9PM</h3>
+            <h3>Tickets $25</h3>
+            <a href="https://www.eventbrite.com/e/austins-rockin-new-years-eve-show-hosted-by-austin-irby-tickets-1079210821619?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-sm-4 show-2">
-            <img src="images/NMW Mod.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Chirstmas Show with Nicole Marie Quinn & Special Guests</h2>
-            <h3>December 15th, 2024</h3>
-            <h3>Red Door 1PM | Show 2PM</h3>
-            <h3>Tickets $5</h3>
-            <a href="https://www.eventbrite.com/e/christmas-show-with-nicole-marie-quinn-tickets-1072701943389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <img src="images/Carter Lybrand JAN25.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Carter Lybrand</h2>
+            <h3>January 16th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
