--- a/Calendar.html
+++ b/Calendar.html
@@ -92,9 +92,9 @@
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/Carter Lybrand JAN25.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Carter Lybrand.png" style="width: 100%" alt="Responsive image">
             <h2>Carter Lybrand</h2>
-            <h3>January 16th, 2025</h3>
+            <h3>January 17th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
