--- a/Calendar.html
+++ b/Calendar.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/Carter Lybrand.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Lybrand.png" style="width: 100%" alt="Responsive image">
             <h2>Carter Lybrand</h2>
             <h3>January 17th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
