--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-           <div class="col-sm-4 show-1">
-            <img src="images/Lybrand.png" style="width: 100%" alt="Responsive image">
-            <h2>Carter Lybrand</h2>
-            <h3>January 17th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-sm-4 show-2">
+        <div class="col-sm-4 show-1">
             <img src="images/Madison Medlin 013125.jpg" style="width: 100%" alt="Responsive image">
             <h2>Madison Medlin</h2>
             <h3>January 31st, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $5</h3>
             <a href="https://www.eventbrite.com/e/an-evening-with-madison-medlin-5-friday-night-with-open-mic-pre-show-tickets-1106745067289?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+    
+         <div class="col-sm-4 show-2">
+            <img src="images/Jon Byrd 02012025.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Jon Byrd</h2>
+            <h3>February 1st, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $12</h3>
+            <a href="https://www.eventbrite.com/e/jon-byrd-tickets-1134719740289?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
