--- a/Contact.html
+++ b/Contact.html
@@ -116,8 +116,8 @@
             <h3>Tickets $5</h3>
             <a href="https://www.eventbrite.com/e/an-evening-with-madison-medlin-5-friday-night-with-open-mic-pre-show-tickets-1106745067289?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
-    
-         <div class="col-sm-4 show-2">
+        
+         <div class="col-md-4 show-3">
             <img src="images/Jon Byrd 02012025.jpg" style="width: 100%" alt="Responsive image">
             <h2>Jon Byrd</h2>
             <h3>February 1st, 2025</h3>
