--- a/Calendar.html
+++ b/Calendar.html
@@ -119,7 +119,7 @@
             <h3>February 7th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/patty-pershayla-tickets-1218648042099?aff=ebdssbdestsearch" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/patty-pershayla-tickets-1218648042099?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
          <div class="col-md-4 show-4">
@@ -140,6 +140,8 @@
             <a href="https://www.eventbrite.com/e/abe-partridge-with-david-childers-and-the-serpents-tickets-1106821997389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+    </div>
+        
     <div class="row content">
 
          <div class="col-md-4 show-4">
