--- a/Calendar.html
+++ b/Calendar.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="col-md-4 show-6">
-            <img src="images/Stewart 04112025.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Stewart 04112025 (2).jpg" style="width: 100%" alt="Responsive image">
             <h2>Bonnie Stewart</h2>
             <h3>April 11th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
