--- a/Calendar.html
+++ b/Calendar.html
@@ -145,7 +145,7 @@
     <div class="row content">
 
          <div class="col-md-4 show-4">
-            <img src="images/Prater.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Prater 031525.png" style="width: 100%" alt="Responsive image">
             <h2>The Kevin Prater Band</h2>
             <h3>March 15th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -154,7 +154,7 @@
         </div>
 
         <div class="col-md-4 show-5">
-            <img src="images/Wayne Hancock MAR25.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Hancock 032925.png" style="width: 100%" alt="Responsive image">
             <h2>Wayne "The Train" Hancock</h2>
             <h3>March 29th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -163,7 +163,7 @@
         </div>
 
         <div class="col-md-4 show-6">
-            <img src="images/Stewart 04112025 (2).jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Bonnie Steward 041125.png" style="width: 100%" alt="Responsive image">
             <h2>Bonnie Stewart</h2>
             <h3>April 11th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -176,7 +176,7 @@
     <div class="row content">
         
          <div class="col-md-4 show-6">
-            <img src="images/Backline.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Backline 041125.png" style="width: 100%" alt="Responsive image">
             <h2>Backline</h2>
             <h3>April 12th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -194,7 +194,7 @@
         </div>
 
         <div class="col-md-4 show-7">
-            <img src="images/Stella Prince 051825.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Stella Prince 051825.png" style="width: 100%" alt="Responsive image">
             <h2>Stella Prince</h2>
             <h3>May 18th, 2025</h3>
             <h3>Red Door 2PM | Show 3PM</h3>
@@ -207,7 +207,7 @@
     <div class="row content">
 
          <div class="col-md-4 show-7">
-            <img src="images/Great Aunt 07132025.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Great Aunt 071325.png" style="width: 100%" alt="Responsive image">
             <h2>Great Aunt</h2>
             <h3>July 13th, 2025</h3>
             <h3>Red Door 2PM | Show 3PM</h3>
