--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-        <div class="col-sm-4 show-1">
-            <img src="images/Madison Medlin 013125.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Madison Medlin</h2>
-            <h3>January 31st, 2025</h3>
+        <div class="col-md-4 show-4">
+            <img src="images/PerShayla 02072025.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Patty PerShayla</h2>
+            <h3>February 7th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $5</h3>
-            <a href="https://www.eventbrite.com/e/an-evening-with-madison-medlin-5-friday-night-with-open-mic-pre-show-tickets-1106745067289?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/patty-pershayla-tickets-1218648042099?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
-         <div class="col-md-4 show-3">
-            <img src="images/Jon Byrd 02012025.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Jon Byrd</h2>
-            <h3>February 1st, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $12</h3>
-            <a href="https://www.eventbrite.com/e/jon-byrd-tickets-1134719740289?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         <div class="col-md-4 show-4">
+            <img src="images/Jenkins Garland 02142025.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Valentine's Dinner & Country Love Songs w/ Gale Jenkins and Joey Garland</h2>
+            <h3>February 14th, 2025</h3>
+            <h3>Event 7PM - 10PM</h3>
+            <h3>Tickets $75</h3>
+            <a href="https://www.eventbrite.com/e/valentines-dinner-and-country-love-songs-tickets-1218611763589?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
