--- a/Calendar.html
+++ b/Calendar.html
@@ -174,6 +174,15 @@
     <div class="row content">
 
          <div class="col-md-4 show-7">
+            <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
+            <h2>Tim Graves and The Farmhands w/ Special Guest Chickenman and Free Range/h2>
+            <h3>July 12th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/tim-graves-and-the-farm-hands-w-special-guest-chicken-man-and-free-range-tickets-1235282305629?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+         <div class="col-md-4 show-7">
             <img src="images/Great Aunt 071325.png" style="width: 100%" alt="Responsive image">
             <h2>Great Aunt</h2>
             <h3>July 13th, 2025</h3>
