--- a/Calendar.html
+++ b/Calendar.html
@@ -175,7 +175,8 @@
 
          <div class="col-md-4 show-7">
             <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
-            <h2>Tim Graves and The Farmhands w/ Special Guest Chickenman and Free Range/h2>
+            <h2>Tim Graves and The Farmhands</h2>
+            <h2>w/ Special Guest Chickenman and Free Range</h2>
             <h3>July 12th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
