--- a/About.html
+++ b/About.html
@@ -89,23 +89,23 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-       <div class="col-md-4 show-1">
-            <img src="images/Stinson 030825.png" style="width: 100%" alt="Responsive image">
-            <h2>Kenny Stinson and Perfect Tym'n</h2>
-            <h3>March 8th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/d/united-states--south-carolina/the-fiddle-and-bow-music-hall/" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
+        <div class="col-md-4 show-3">
             <img src="images/Prater March 2025.jpg" style="width: 100%" alt="Responsive image">
             <h2>The Kevin Prater Band</h2>
             <h3>March 15th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/the-kevin-prater-band-tickets-1106824093659" class="btn custom-btn" role="button">Tickets</a>  
-        </div>  
+        </div>
+
+         <div class="col-md-4 show-4">
+            <img src="images/Hancock 032925.png" style="width: 100%" alt="Responsive image">
+            <h2>Wayne "The Train" Hancock</h2>
+            <h3>March 29th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1106737294039?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
     
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
