--- a/Calendar.html
+++ b/Calendar.html
@@ -101,7 +101,7 @@
         </div>
 
          <div class="col-md-4 show-5">
-            <img src="images/Reedy River String Brand.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Reedy River String Band.jpg" style="width: 100%" alt="Responsive image">
             <h2>Reedy River String Band</h2>
             <h3>April 5th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
