--- a/Calendar.html
+++ b/Calendar.html
@@ -171,6 +171,8 @@
             <a href="https://www.eventbrite.com/e/marty-brown-tickets-1257161898079?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+    </div>
+
     <div class="row content">
 
         <div class="col-md-4 show-6">
