--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-       <div class="col-md-4 show-3">
-            <img src="images/Prater March 2025.jpg" style="width: 100%" alt="Responsive image">
-            <h2>The Kevin Prater Band</h2>
-            <h3>March 15th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/the-kevin-prater-band-tickets-1106824093659" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-         <div class="col-md-4 show-4">
+        <div class="col-md-4 show-1">
             <img src="images/Hancock 032925.png" style="width: 100%" alt="Responsive image">
             <h2>Wayne "The Train" Hancock</h2>
             <h3>March 29th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $30</h3>
             <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1106737294039?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-2">
+            <img src="images/Reedy River String Band.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Reedy River String Band</h2>
+            <h3>April 5th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/reedy-river-string-band-tickets-1230917570589?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
