--- a/Store.html
+++ b/Store.html
@@ -93,7 +93,7 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-         <div class="col-md-4 show-1">
+         <div class="col-sm-4 show-1">
             <img src="images/Hancock 032925.png" style="width: 100%" alt="Responsive image">
             <h2>Wayne "The Train" Hancock</h2>
             <h3>March 29th, 2025</h3>
@@ -102,7 +102,7 @@
             <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1106737294039?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-2">
+         <div class="col-sm-4 show-2">
             <img src="images/Reedy River String Band.jpg" style="width: 100%" alt="Responsive image">
             <h2>Reedy River String Band</h2>
             <h3>April 5th, 2025</h3>
