--- a/Calendar.html
+++ b/Calendar.html
@@ -122,6 +122,15 @@
             <a href="https://www.eventbrite.com/e/backline-tickets-1106775548459?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+         <div class="col-md-4 show-6">
+            <img src="images/Guthrie 050125.png" style="width: 100%" alt="Responsive image">
+            <h2>Noah Guthrie</h2>
+            <h3>May 5th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/noah-guthrie-americana-singersongwriter-tickets-1298569870439?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
          <div class="col-md-4 show-7">
             <img src="images/Paisley 050325.png" style="width: 100%" alt="Responsive image">
             <h2>Danny Paisley and The Southern Grass</h2>
@@ -129,6 +138,19 @@
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/danny-paisley-and-the-southern-grass-tickets-1257323952789?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+    </div>
+
+    <div class="row content">
+
+          <div class="col-md-4 show-6">
+            <img src="images/Chickenman 051025.png" style="width: 100%" alt="Responsive image">
+            <h2>Chickenman & Free Range</h2>
+            <h3>May 10th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/chickenman-and-free-range-tickets-1298578295639?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-6">
@@ -139,10 +161,6 @@
             <h3>Tickets $12</h3>
             <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1106779410009?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
-
-    </div>
-
-    <div class="row content">
         
         <div class="col-md-4 show-7">
             <img src="images/Prince 051825.png" style="width: 100%" alt="Responsive image">
@@ -152,6 +170,10 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+
+    </div>
+
+    <div class="row content"> 
 
          <div class="col-md-4 show-7">
             <img src="images/Brown 060725.png" style="width: 100%" alt="Responsive image">
@@ -171,10 +193,6 @@
             <a href="https://www.eventbrite.com/e/carolina-bluegrass-style-tickets-1106803140989?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-    </div>
-
-    <div class="row content"> 
-
          <div class="col-md-4 show-7">
             <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
             <h2>Tim Graves and The Farmhands</h2>
@@ -192,6 +210,15 @@
             <h3>Red Door 2PM | Show 3PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/an-afternoon-with-great-aunt-australias-best-country-folk-duo-tickets-1218380180919?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-7">
+            <img src="images/Tolliver 072625.png" style="width: 100%" alt="Responsive image">
+            <h2>Jacob Tolliver</h2>
+            <h3>July 26th, 2025</h3>
+            <h3>Red Door 2PM | Show 3PM</h3>
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/jacob-toliver-tickets-1290624806539?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-7">
