--- a/Calendar.html
+++ b/Calendar.html
@@ -125,7 +125,7 @@
          <div class="col-md-4 show-6">
             <img src="images/Guthrie 050125.png" style="width: 100%" alt="Responsive image">
             <h2>Noah Guthrie</h2>
-            <h3>May 5th, 2025</h3>
+            <h3>May 1st, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/noah-guthrie-americana-singersongwriter-tickets-1298569870439?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
