--- a/Calendar.html
+++ b/Calendar.html
@@ -203,6 +203,8 @@
             <a href="https://www.eventbrite.com/e/an-afternoon-with-great-aunt-australias-best-country-folk-duo-tickets-1218380180919?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+    </div>
+
     <div class="row content"> 
 
          <div class="col-md-4 show-7">
