--- a/About.html
+++ b/About.html
@@ -89,22 +89,22 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-          <div class="col-md-4 show-1">
-            <img src="images/Reedy River String Band.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Reedy River String Band</h2>
-            <h3>April 5th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/reedy-river-string-band-tickets-1230917570589?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
+       <div class="col-md-4 show-5">
             <img src="images/Bonnie Stewart 041125.png" style="width: 100%" alt="Responsive image">
             <h2>Bonnie Stewart</h2>
             <h3>April 11th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
             <a href="https://www.eventbrite.com/e/bonnie-stewart-tickets-1218354393789?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+          <div class="col-md-4 show-6">
+            <img src="images/Backline 041225.png" style="width: 100%" alt="Responsive image">
+            <h2>Backline</h2>
+            <h3>April 12th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/backline-tickets-1106775548459?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
