--- a/Calendar.html
+++ b/Calendar.html
@@ -179,6 +179,7 @@
         <div class="col-md-4 show-7">
             <img src="images/Tolliver 072625.png" style="width: 100%" alt="Responsive image">
             <h2>Jacob Tolliver</h2>
+            <h2>w/ Special Guest Sebastien Bordeaux & Hillbilly Royale</h2>
             <h3>July 26th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $30</h3>
