--- a/About.html
+++ b/About.html
@@ -89,22 +89,22 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-       <div class="col-md-4 show-1">
-            <img src="images/Guthrie 050125.png" style="width: 100%" alt="Responsive image">
-            <h2>Noah Guthrie</h2>
-            <h3>May 1st, 2025</h3>
+         <div class="col-md-4 show-3">
+            <img src="images/Chickenman 051025.png" style="width: 100%" alt="Responsive image">
+            <h2>Chickenman & Free Range</h2>
+            <h3>May 10th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/noah-guthrie-americana-singersongwriter-tickets-1298569870439?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/chickenman-and-free-range-tickets-1298578295639?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-        <div class="col-md-4 show-2">
-            <img src="images/Paisley 050325.png" style="width: 100%" alt="Responsive image">
-            <h2>Danny Paisley and The Southern Grass</h2>
-            <h3>May 3rd, 2025</h3>
+        <div class="col-md-4 show-4">
+            <img src="images/Brand New Box of Matches MAY25.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches</h2>
+            <h3>May 17th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/danny-paisley-and-the-southern-grass-tickets-1257323952789?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $12</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1106779410009?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
