--- a/Calendar.html
+++ b/Calendar.html
@@ -82,15 +82,6 @@
 
     <div class="row content"> 
 
-         <div class="col-md-4 show-3">
-            <img src="images/Chickenman 051025.png" style="width: 100%" alt="Responsive image">
-            <h2>Chickenman & Free Range</h2>
-            <h3>May 10th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/chickenman-and-free-range-tickets-1298578295639?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
         <div class="col-md-4 show-4">
             <img src="images/Brand New Box of Matches MAY25.jpg" style="width: 100%" alt="Responsive image">
             <h2>Brand New Box of Matches</h2>
@@ -108,12 +99,8 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
-                
-    </div>
 
-    <div class="row content">  
-
-        <div class="col-md-4 show-6">
+          <div class="col-md-4 show-6">
             <img src="images/Brown 060725.png" style="width: 100%" alt="Responsive image">
             <h2>Marty Brown</h2>
             <h3>June 7th, 2025</h3>
@@ -121,6 +108,10 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/marty-brown-tickets-1257161898079?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+                
+    </div>
+
+    <div class="row content">  
 
         <div class="col-md-4 show-6">
             <img src="images/CBS 062125.png" style="width: 100%" alt="Responsive image">
@@ -129,6 +120,15 @@
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
             <a href="https://www.eventbrite.com/e/carolina-bluegrass-style-tickets-1106803140989?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-6">
+            <img src="images/CBS 062125.png" style="width: 100%" alt="Responsive image">
+            <h2>Martha Spencer & The Wonderland Country Band</h2>
+            <h3>July 11th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1363699986369?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-7">
