--- a/Calendar.html
+++ b/Calendar.html
@@ -83,7 +83,7 @@
     <div class="row content"> 
 
         <div class="col-md-4 show-5">
-            <img src="images/" style="width: 100%" alt="Responsive image">
+            <img src="images/Sullivan Sisters 060325.png" style="width: 100%" alt="Responsive image">
             <h2>The Sullivan Sisters</h2>
             <h2>6PM-7PM Bluegrass Jam</h2>
             <h3>June 3rd, 2025</h3>
