--- a/Calendar.html
+++ b/Calendar.html
@@ -85,7 +85,7 @@
         <div class="col-md-4 show-5">
             <img src="images/Sullivan Sisters 060325.png" style="width: 100%" alt="Responsive image">
             <h2>The Sullivan Sisters</h2>
-            <h2>6PM-7PM Bluegrass Jam</h2>
+            <h2>Bluegrass Jam Before Show 5PM-6PM</h2>
             <h3>June 3rd, 2025</h3>
             <h3>Red Door 5PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
