--- a/Calendar.html
+++ b/Calendar.html
@@ -89,7 +89,7 @@
             <h3>June 3rd, 2025</h3>
             <h3>Red Door 5PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/an-afternoon-with-stella-prince-tickets-1106814123839?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/the-sullivan-sisters-tickets-1370431821469?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-6">
