--- a/Calendar.html
+++ b/Calendar.html
@@ -114,6 +114,15 @@
 
     <div class="row content">  
 
+        <div class="col-md-4 show-6">
+            <img src="images/CBS 062125.png" style="width: 100%" alt="Responsive image">
+            <h2>Carolina Bluegrass Style</h2>
+            <h3>June 21st, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/carolina-bluegrass-style-tickets-1106803140989?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
          <div class="col-md-4 show-6">
             <img src="images/Martha Spencer 071125.png" style="width: 100%" alt="Responsive image">
             <h2>Martha Spencer & The Wonderland Country Band</h2>
