--- a/Calendar.html
+++ b/Calendar.html
@@ -174,7 +174,7 @@
             <a href="https://www.eventbrite.com/e/jacob-toliver-tickets-1290624806539?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-    </div>
+<div class="row content">
 
        <div class="col-md-4 show-1">
             <img src="images/Aden Webb.png" style="width: 100%" alt="Responsive image">
@@ -203,7 +203,7 @@
             <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
     
- <div>
+ <div class="row content">
 
        <div class="col-md-4 show-1">
             <img src="images/Brian and Melanie 091825.png" style="width: 100%" alt="Responsive image">
