--- a/About.html
+++ b/About.html
@@ -90,21 +90,22 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
          <div class="col-md-4 show-1">
-            <img src="images/Chickenman 051025.png" style="width: 100%" alt="Responsive image">
-            <h2>Chickenman & Free Range</h2>
-            <h3>May 10th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/chickenman-and-free-range-tickets-1298578295639?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <img src="images/Sullivan Sisters 060325.png" style="width: 100%" alt="Responsive image">
+            <h2>The Sullivan Sisters</h2>
+            <h2>Bluegrass Jam Before Show 5PM-6PM</h2>
+            <h3>June 3rd, 2025</h3>
+            <h3>Red Door 5PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/the-sullivan-sisters-tickets-1370431821469?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/Brand New Box of Matches MAY25.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Brand New Box of Matches</h2>
-            <h3>May 17th, 2025</h3>
+            <img src="images/Brown 060725.png" style="width: 100%" alt="Responsive image">
+            <h2>Marty Brown</h2>
+            <h3>June 7th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $12</h3>
-            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1106779410009?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/marty-brown-tickets-1257161898079?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
