--- a/Calendar.html
+++ b/Calendar.html
@@ -174,6 +174,8 @@
             <a href="https://www.eventbrite.com/e/jacob-toliver-tickets-1290624806539?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+    </div>
+
 <div class="row content">
 
        <div class="col-md-4 show-1">
@@ -202,6 +204,8 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+
+</div>
     
  <div class="row content">
 
