--- a/About.html
+++ b/About.html
@@ -89,23 +89,22 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-          <div class="col-md-4 show-1">
-            <img src="images/Sullivan Sisters 060325.png" style="width: 100%" alt="Responsive image">
-            <h2>The Sullivan Sisters</h2>
-            <h2>Bluegrass Jam Before Show 5PM-6PM</h2>
-            <h3>June 3rd, 2025</h3>
-            <h3>Red Door 5PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/the-sullivan-sisters-tickets-1370431821469?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        <div class="col-md-4 show-1">
+            <img src="images/CBS 062125.png" style="width: 100%" alt="Responsive image">
+            <h2>Carolina Bluegrass Style</h2>
+            <h3>June 21st, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/carolina-bluegrass-style-tickets-1106803140989?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/Brown 060725.png" style="width: 100%" alt="Responsive image">
-            <h2>Marty Brown</h2>
-            <h3>June 7th, 2025</h3>
+            <img src="images/Lauderdale 0627.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Jim Lauderdale w/ Guest Mac Leaphart</h2>
+            <h3>June 27th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/marty-brown-tickets-1257161898079?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $25</h3>
+            <a href="https://www.eventbrite.com/e/jim-lauderdale-w-guest-mac-leaphart-tickets-1371904335799?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
