--- a/Contact.html
+++ b/Contact.html
@@ -109,21 +109,21 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
         <div class="col-md-4 show-1">
-            <img src="images/CBS 062125.png" style="width: 100%" alt="Responsive image">
-            <h2>Carolina Bluegrass Style</h2>
-            <h3>June 21st, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/carolina-bluegrass-style-tickets-1106803140989?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
             <img src="images/Lauderdale 0627.jpg" style="width: 100%" alt="Responsive image">
             <h2>Jim Lauderdale w/ Guest Mac Leaphart</h2>
             <h3>June 27th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $25</h3>
             <a href="https://www.eventbrite.com/e/jim-lauderdale-w-guest-mac-leaphart-tickets-1371904335799?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-2">
+            <img src="images/Martha Spencer 071125.png" style="width: 100%" alt="Responsive image">
+            <h2>Martha Spencer & The Wonderland Country Band</h2>
+            <h3>July 11th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1363699986369?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
