--- a/About.html
+++ b/About.html
@@ -90,15 +90,6 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
         <div class="col-md-4 show-1">
-            <img src="images/Lauderdale 0627.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Jim Lauderdale w/ Guest Mac Leaphart</h2>
-            <h3>June 27th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $25</h3>
-            <a href="https://www.eventbrite.com/e/jim-lauderdale-w-guest-mac-leaphart-tickets-1371904335799?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-         <div class="col-md-4 show-2">
             <img src="images/Martha Spencer 071125.png" style="width: 100%" alt="Responsive image">
             <h2>Martha Spencer & The Wonderland Country Band</h2>
             <h3>July 11th, 2025</h3>
@@ -106,6 +97,16 @@
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1363699986369?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+
+        <div class="col-md-4 show-2">
+            <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
+            <h2>Tim Graves and The Farmhands</h2>
+            <h2>w/ Special Guest Chickenman and Free Range</h2>
+            <h3>July 12th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/tim-graves-and-the-farm-hands-w-special-guest-chicken-man-and-free-range-tickets-1235282305629?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
     
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
