--- a/Store.html
+++ b/Store.html
@@ -93,16 +93,7 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-     <div class="col-md-4 show-1">
-            <img src="images/Lauderdale 0627.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Jim Lauderdale w/ Guest Mac Leaphart</h2>
-            <h3>June 27th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $25</h3>
-            <a href="https://www.eventbrite.com/e/jim-lauderdale-w-guest-mac-leaphart-tickets-1371904335799?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-         <div class="col-md-4 show-2">
+         <div class="col-md-4 show-1">
             <img src="images/Martha Spencer 071125.png" style="width: 100%" alt="Responsive image">
             <h2>Martha Spencer & The Wonderland Country Band</h2>
             <h3>July 11th, 2025</h3>
@@ -110,6 +101,16 @@
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1363699986369?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+
+        <div class="col-md-4 show-2">
+            <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
+            <h2>Tim Graves and The Farmhands</h2>
+            <h2>w/ Special Guest Chickenman and Free Range</h2>
+            <h3>July 12th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/tim-graves-and-the-farm-hands-w-special-guest-chicken-man-and-free-range-tickets-1235282305629?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
         
           <div class="col-sm-4 never-know">
             <div class="">
