--- a/About.html
+++ b/About.html
@@ -89,24 +89,24 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-        <div class="col-md-4 show-1">
-            <img src="images/Martha Spencer 071125.png" style="width: 100%" alt="Responsive image">
-            <h2>Martha Spencer & The Wonderland Country Band</h2>
-            <h3>July 11th, 2025</h3>
+       <div class="col-md-4 show-1">
+            <img src="images/Tolliver 072625 (2).png" style="width: 100%" alt="Responsive image">
+            <h2>Jacob Tolliver</h2>
+            <h2>w/ Special Guest Sebastien Bordeaux & Hillbilly Royale</h2>
+            <h3>July 26th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1363699986369?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/jacob-toliver-tickets-1290624806539?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/Graves 071225.png" style="width: 100%" alt="Responsive image">
-            <h2>Tim Graves and The Farmhands</h2>
-            <h2>w/ Special Guest Chickenman and Free Range</h2>
-            <h3>July 12th, 2025</h3>
+            <img src="images/Aden Webb.png" style="width: 100%" alt="Responsive image">
+            <h2>Aden Webb</h2>
+            <h3>August 15th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/tim-graves-and-the-farm-hands-w-special-guest-chicken-man-and-free-range-tickets-1235282305629?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
+            <a href="https://www.eventbrite.com/e/aden-webb-tickets-1354273290869?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
     
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
