--- a/Calendar.html
+++ b/Calendar.html
@@ -130,7 +130,7 @@
             <h3>August 31st, 2025</h3>
             <h3>Red Door 2PM | Show 3PM</h3>
             <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1407870351119?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://goldpine.thrivecart.com/83125-goldpine-honea-path-fiddle-and-bow/?fbclid=IwY2xjawLpqWNleHRuA2FlbQIxMABicmlkETFhajJzWmFRSUw3QW9BaHNRAR70INIZ2kDscqW2Q1gxLf49g7lk9wqTbtkyHXfc3OoJyNK9NXErKRobtyJV3g_aem_5enoE2rYG7uTiniZB7nm1A" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
          <div class="col-md-4 show-2">
