--- a/Store.html
+++ b/Store.html
@@ -93,23 +93,22 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-          <div class="col-md-4 show-1">
-            <img src="images/Tolliver 072625 (2).png" style="width: 100%" alt="Responsive image">
-            <h2>Jacob Tolliver</h2>
-            <h2>w/ Special Guest Sebastien Bordeaux & Hillbilly Royale</h2>
-            <h3>July 26th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $30</h3>
-            <a href="https://www.eventbrite.com/e/jacob-toliver-tickets-1290624806539?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
+        <div class="col-md-4 show-1">
             <img src="images/Aden Webb.png" style="width: 100%" alt="Responsive image">
             <h2>Aden Webb</h2>
             <h3>August 15th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/aden-webb-tickets-1354273290869?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+        <div class="col-md-4 show-2">
+            <img src="images/Wanda.PNG" style="width: 100%" alt="Responsive image">
+            <h2>Wanda Johnson</h2>
+            <h3>August 22nd, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $12</h3>
+            <a href="https://www.eventbrite.com/e/an-evening-with-wanda-johnson-tickets-1407567314729?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
           <div class="col-sm-4 never-know">
