--- a/About.html
+++ b/About.html
@@ -89,16 +89,7 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-     <div class="col-md-4 show-1">
-            <img src="images/Aden Webb.png" style="width: 100%" alt="Responsive image">
-            <h2>Aden Webb</h2>
-            <h3>August 15th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/aden-webb-tickets-1354273290869?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
+         <div class="col-md-4 show-2">
             <img src="images/Wanda.PNG" style="width: 100%" alt="Responsive image">
             <h2>Wanda Johnson</h2>
             <h3>August 22nd, 2025</h3>
@@ -106,7 +97,15 @@
             <h3>Tickets $12</h3>
             <a href="https://www.eventbrite.com/e/an-evening-with-wanda-johnson-tickets-1407567314729?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
-    
+
+        <div class="col-md-4 show-2">
+            <img src="images/Matches.PNG" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches</h2>
+            <h3>August 23rd, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1407870351119?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
