--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-      <div class="col-md-4 show-1">
-            <img src="images/Aden Webb.png" style="width: 100%" alt="Responsive image">
-            <h2>Aden Webb</h2>
-            <h3>August 15th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/aden-webb-tickets-1354273290869?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
+        <div class="col-md-4 show-1">
             <img src="images/Wanda.PNG" style="width: 100%" alt="Responsive image">
             <h2>Wanda Johnson</h2>
             <h3>August 22nd, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $12</h3>
             <a href="https://www.eventbrite.com/e/an-evening-with-wanda-johnson-tickets-1407567314729?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+        <div class="col-md-4 show-2">
+            <img src="images/Matches.PNG" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches</h2>
+            <h3>August 23rd, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1407870351119?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
